# socket-programing

./: .gitignore  README.md  client  client.c  name  name.c  server  server.c  test.c  test.out
IPC/: ipc_client.c  ipc_serv.c  pipe1.c  pipe2.c  pipe3.c  sharedmem.c  shm_consumer.c  shm_producer.c
raw_socket/: icmp_packet  icmp_packet.c  my_ping  my_ping.c  read_packet  read_packet.c  syn_port_scan  syn_port_scan.c
small-dns/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  core  dns.db  dns.db.bak  dnslist.txt  test.c  test.txt
small-dns/client/: Makefile  main.c
small-dns/common/: common.h
small-dns/include/: common.c  db.c  hashtable.c  str.c
small-dns/include/headers/: common.h  db.h  hashtable.h  str.h
small-dns/server/: Makefile  file.h  hashtable.c  hashtable.h  main.c
small-dns/test/: hashtable_test.c
week1/client/: Makefile  client.c
week1/server/: Makefile  logger.c  logger.h  server.c
week2/: check_class.c  check_edian.c  copy.c  fd_seri.c
week3/: namelookup  namelookup.c  test  test.c  uecho_client  uecho_server
week3/calc/: client  client.c  server  server.c
