INCLUDE_DIRECTORIES ( "${PROJECT_SOURCE_DIR}/include/headers" )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY ( client CLIENT_SOURCES )
AUX_SOURCE_DIRECTORY ( server SERVER_SOURCES )
AUX_SOURCE_DIRECTORY ( include INCLUDE_SOURCES )
AUX_SOURCE_DIRECTORY ( test TEST_SOURCES )

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")


ADD_EXECUTABLE ( client.out ${CLIENT_SOURCES} ${INCLUDE_SOURCES} )
ADD_EXECUTABLE ( server.out ${SERVER_SOURCES} ${INCLUDE_SOURCES})

ADD_EXECUTABLE ( test.out ${TEST_SOURCES} ${INCLUDE_SOURCES})
